- Re-Added *.rc file to enable file information in explorer/properties - removed files stdafx.* after their references have been removed already - removed leds.txt because not needed by project - removed *.aps - what is it good for??
Signed-off-by: Stefan Langer <dev@datenheim.de>

--- a/src/vscp/drivers/level1/usb2can/usb2can/usb2can.vcxproj
+++ b/src/vscp/drivers/level1/usb2can/usb2can/usb2can.vcxproj
@@ -213,6 +213,9 @@
   <ItemGroup>
     <Text Include="ReadMe.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="win32\versioninfo.rc" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
